# esp-display-clock-rs

./: .gitignore  Cargo.toml  README.md  build.rs
.cargo/: config.toml
.github/workflows/: CI.yml
crates/clock-desktop/: Cargo.toml
crates/clock-desktop/src/: main.rs
crates/clock-desktop/src/actors/: ui.rs
crates/clock-desktop/src/models/: clock.rs
crates/clock-embedded/: Cargo.toml
crates/clock-embedded/src/: main.rs
crates/clock-embedded/src/actors/: ui.rs
crates/clock-embedded/src/hardware/: board.rs  mod.rs
crates/clock-embedded/src/hardware/backlight/: ledc.rs
crates/clock-embedded/src/hardware/display/: display_controller.rs
crates/clock-embedded/src/hardware/radio/: wifi.rs
crates/clock-embedded/src/models/: clock.rs
crates/clock-ui/: Cargo.toml
crates/clock-ui/src/: lib.rs
crates/clock-ui/src/models/: clock.rs
crates/clock-ui/src/screens/: default.rs
crates/clock-ui/src/widgets/: digital_clock.rs
crates/embeddeck-core/: Cargo.toml
crates/embeddeck-desktop/: Cargo.toml
crates/embeddeck-desktop/src/actors/: ui.rs
crates/embeddeck-desktop/src/models/: clock.rs
crates/embeddeck-embedded/: Cargo.toml
crates/embeddeck-embedded/.cargo/: config.toml
crates/embeddeck-embedded/src/: app.rs  main.rs
crates/embeddeck-embedded/src/actors/: ui.rs
crates/embeddeck-embedded/src/hardware/display/: display_controller.rs  mod.rs  spi_display.rs  types.rs
crates/embeddeck-embedded/src/hardware/radio/: wifi.rs
crates/embeddeck-embedded/src/models/: clock.rs  configs.rs  mod.rs
crates/embeddeck-embedded/src/services/: debug.rs  embassy_net.rs  mod.rs  network.rs  ntp.rs  weather.rs  webserver.rs
crates/embeddeck-ui/: Cargo.toml
crates/embeddeck-ui/src/: lib.rs
crates/embeddeck-ui/src/screens/: default.rs
crates/embeddeck-ui/src/widgets/: digital_clock.rs  mod.rs
src/: app.rs  board.rs  config.rs  main.rs  main_desktop.rs
src/actors/: ui.rs
src/assets/images/: ai.raw  jesus.raw
src/backlight/: ledc.rs
src/display/: mod.rs  spi_display.rs
src/hardware/: board.rs  mod.rs
src/hardware/backlight/: ledc.rs  mod.rs
src/hardware/display/: display_controller.rs  mod.rs  spi_display.rs
src/hardware/radio/: wifi.rs
src/hardware/timer/: system_timer.rs
src/models/: clock.rs  configs.rs  mod.rs
src/services/: ntp.rs
src/ui/: actor.rs  actor_desktop.rs  mod.rs
src/ui/screens/: default.rs
webui/: index.html  package-lock.json  package.json
