[workspace]
members = [
    "crates/clock-ui",
    "crates/clock-embedded",
    "crates/clock-desktop",
]
resolver = "2"

[workspace.dependencies]
# --- Shared (both targets) ---
heapless = "0.9.3"
chrono = { version = "0.4.44", default-features = false }
chrono-tz = { version = "0.10.4", default-features = false }
ratatui = { version = "0.30.0", default-features = false }
tui-big-text = "0.8.4"
nanofish = "0.11.3"
log = "0.4.29"

# For fine tuning these settings, please refer to https://doc.rust-lang.org/cargo/reference/profiles.html
[profile.dev]
# The default debug profile is too slow and too big for resource-constrained devices.
# Always build with some optimizations enabled.
opt-level = "s"

[profile.release]
codegen-units = 1     # LLVM can perform better optimizations using a single thread
debug         = 2     # prefer slower builds but better debugging experience
lto           = 'fat'
opt-level     = 's'
