[workspace]
members = [
    "crates/embeddeck-core",
    "crates/embeddeck-ui",
    "crates/embeddeck-embedded",
    "crates/embeddeck-desktop",
]
default-members = [
    "crates/embeddeck-core",
    "crates/embeddeck-ui",
    "crates/embeddeck-desktop",
]
resolver = "2"

[workspace.dependencies]
# --- Shared libraries ---
heapless = "0.9.3"
anyhow = { version = "1.0.102", default-features = false }
chrono = { version = "0.4.44", default-features = false }
chrono-tz = { version = "0.10.4", default-features = false }
ratatui = { version = "0.30.0", default-features = false }
tui-big-text = "0.8.4"
nanofish = "0.11.3"
log = "0.4.29"

# For fine tuning these settings, please refer to https://doc.rust-lang.org/cargo/reference/profiles.html
[profile.dev]
# The default debug profile is too slow and too big for resource-constrained devices.
# Always build with some optimizations enabled.
opt-level = "s"

[profile.release]
codegen-units = 1     # LLVM can perform better optimizations using a single thread
debug         = 2     # prefer slower builds but better debugging experience
lto           = 'fat'
opt-level     = 's'
