[package]
name    = "clock-desktop"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "clock-desktop"
path = "src/main.rs"

[dependencies]
chrono       = { workspace = true, features = ["clock"] }
chrono-tz    = { workspace = true }
ratatui      = { workspace = true, features = ["crossterm"] }
log          = { workspace = true }

clock-ui     = { path = "../clock-ui" }

crossterm    = "0.29.0"
