[package]
name    = "embeddeck-desktop"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "embeddeck-desktop"
path = "src/main.rs"

[dependencies]
chrono       = { workspace = true, features = ["clock"] }
chrono-tz    = { workspace = true }
ratatui      = { workspace = true, features = ["crossterm"] }
log          = { workspace = true }

embeddeck-ui = { path = "../embeddeck-ui" }

crossterm    = "0.29.0"
