[package]
name        = "embeddeck-embedded"
edition     = "2024"
version     = "0.1.0"
rust-version = "1.91"

[[bin]]
name = "embeddeck-embedded"
path = "src/main.rs"

[features]
default = []

[dependencies]
# --- Shared (from workspace) ---
heapless     = { workspace = true }
chrono       = { workspace = true }
chrono-tz    = { workspace = true }
ratatui      = { workspace = true }
nanofish     = { workspace = true }
log          = { workspace = true }

# --- UI lib ---
embeddeck-ui = { path = "../embeddeck-ui" }

# --- Embedded only ---
esp-hal                 = { version = "~1.1.1", features = ["esp32", "unstable"] }
esp-bootloader-esp-idf  = { version = "0.5.0",  features = ["esp32"] }
esp-alloc               = { version = "0.10.0", features = ["esp32"] }
esp-rtos                = { version = "0.3.0",  features = ["esp32", "embassy", "esp-radio"] }
esp-radio               = { version = "0.18.0", default-features = false, features = ["esp32", "wifi", "esp-alloc", "unstable"] }

embedded-hal            = "1.0.0"
embedded-hal-async      = "1.0.0"
embedded-hal-bus        = "0.3.0"
embedded-graphics       = "0.8.2"

embassy-executor        = "0.10.0"
embassy-time            = "0.5.1"
embassy-net             = { version = "0.9.1",  features = ["dhcpv4", "dns", "udp"] }

static_cell             = "2.1.1" 

sntpc                   = { version = "0.9.0",  default-features = false }
sntpc-net-embassy       = { version = "0.9.0",  features = ["ipv6"] }

mipidsi                 = "0.10.0"
mousefood               = { version = "0.5.0",  default-features = false, features = ["fonts"] }

esp-println             = { version = "0.17.0", features = ["esp32", "log-04"] }
